@@ -3,7 +3,7 @@ package org.jabref.logic.openoffice;
 import java.net.URISyntaxException;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -23,7 +23,7 @@ import static org.mockito.Mockito.when;
 
 public class StyleLoaderTest {
 
-    private static int numberOfInternalStyles = 2;
+    private static final int NUMBER_OF_INTERNAL_STYLES = 2;
     private StyleLoader loader;
 
     private OpenOfficePreferences preferences;
@@ -65,10 +65,10 @@ public class StyleLoaderTest {
         preferences.setExternalStyles(Collections.emptyList());
         loader = new StyleLoader(preferences, layoutPreferences, encoding);
 
-        String filename = Paths.get(StyleLoader.class.getResource(StyleLoader.DEFAULT_AUTHORYEAR_STYLE_PATH).toURI())
-                               .toFile().getPath();
+        String filename = Path.of(StyleLoader.class.getResource(StyleLoader.DEFAULT_AUTHORYEAR_STYLE_PATH).toURI())
+                              .toFile().getPath();
         loader.addStyleIfValid(filename);
-        assertEquals(numberOfInternalStyles + 1, loader.getStyles().size());
+        assertEquals(NUMBER_OF_INTERNAL_STYLES + 1, loader.getStyles().size());
     }
 
     @Test
@@ -82,11 +82,11 @@ public class StyleLoaderTest {
 
     @Test
     public void testInitalizeWithOneExternalFile() throws URISyntaxException {
-        String filename = Paths.get(StyleLoader.class.getResource(StyleLoader.DEFAULT_AUTHORYEAR_STYLE_PATH).toURI())
+        String filename = Path.of(StyleLoader.class.getResource(StyleLoader.DEFAULT_AUTHORYEAR_STYLE_PATH).toURI())
                                .toFile().getPath();
         when(preferences.getExternalStyles()).thenReturn(Collections.singletonList(filename));
         loader = new StyleLoader(preferences, layoutPreferences, encoding);
-        assertEquals(numberOfInternalStyles + 1, loader.getStyles().size());
+        assertEquals(NUMBER_OF_INTERNAL_STYLES + 1, loader.getStyles().size());
     }
 
     @Test
@@ -94,12 +94,12 @@ public class StyleLoaderTest {
         preferences.setExternalStyles(Collections.singletonList("DefinitelyNotAValidFileNameOrWeAreExtremelyUnlucky"));
 
         loader = new StyleLoader(preferences, layoutPreferences, encoding);
-        assertEquals(numberOfInternalStyles, loader.getStyles().size());
+        assertEquals(NUMBER_OF_INTERNAL_STYLES, loader.getStyles().size());
     }
 
     @Test
     public void testInitalizeWithOneExternalFileRemoveStyle() throws URISyntaxException {
-        String filename = Paths.get(StyleLoader.class.getResource(StyleLoader.DEFAULT_AUTHORYEAR_STYLE_PATH).toURI())
+        String filename = Path.of(StyleLoader.class.getResource(StyleLoader.DEFAULT_AUTHORYEAR_STYLE_PATH).toURI())
                                .toFile().getPath();
         when(preferences.getExternalStyles()).thenReturn(Collections.singletonList(filename));
 
@@ -120,7 +120,7 @@ public class StyleLoaderTest {
 
     @Test
     public void testInitalizeWithOneExternalFileRemoveStyleUpdatesPreferences() throws URISyntaxException {
-        String filename = Paths.get(StyleLoader.class.getResource(StyleLoader.DEFAULT_AUTHORYEAR_STYLE_PATH).toURI())
+        String filename = Path.of(StyleLoader.class.getResource(StyleLoader.DEFAULT_AUTHORYEAR_STYLE_PATH).toURI())
                                .toFile().getPath();
         when(preferences.getExternalStyles()).thenReturn(Collections.singletonList(filename));
 
@@ -135,7 +135,7 @@ public class StyleLoaderTest {
         for (OOBibStyle style : toremove) {
             assertTrue(loader.removeStyle(style));
         }
-        //As the prefs are mocked away, the getExternalStyles still returns the initial one
+        // As the prefs are mocked away, the getExternalStyles still returns the initial one
         assertFalse(preferences.getExternalStyles().isEmpty());
     }
 
@@ -144,7 +144,7 @@ public class StyleLoaderTest {
         preferences.setExternalStyles(Collections.emptyList());
         loader = new StyleLoader(preferences, layoutPreferences, encoding);
         int beforeAdding = loader.getStyles().size();
-        String filename = Paths.get(StyleLoader.class.getResource(StyleLoader.DEFAULT_AUTHORYEAR_STYLE_PATH).toURI())
+        String filename = Path.of(StyleLoader.class.getResource(StyleLoader.DEFAULT_AUTHORYEAR_STYLE_PATH).toURI())
                                .toFile().getPath();
         loader.addStyleIfValid(filename);
         loader.addStyleIfValid(filename);
@@ -200,6 +200,6 @@ public class StyleLoaderTest {
         }
 
         assertFalse(loader.removeStyle(toremove.get(0)));
-        assertEquals(numberOfInternalStyles, loader.getStyles().size());
+        assertEquals(NUMBER_OF_INTERNAL_STYLES, loader.getStyles().size());
     }
 }
